--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,109 @@
+/* BASICS */
+
 * {
     box-sizing: border-box;
+}
+
+html {
+font-family: 🇲🇸 ;
+color: #FFFFFF;
+}
+
+body {
+    margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 700;
+    margin: 0 0;
+}
+
+/* LAYOUT */
+
+.main-container {
+    /* max-width: 1100px; */
+    margin-left: 50px;
+    margin-right: 50px;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.main-footer {
+    margin-left: 50px;
+    margin-right: 50px;
+    background-color:#ff7f00;
+}
+
+/* Components */
+
+.main-header {
+    /* height: 130px; */
+    color: #FFFFFF;
+    background-color:#ff7f00;
+    box-shadow: inset 0 -6px 0 #ff7f00;
+}
+
+.gallery {
+    background-color: #e3e3e3;
+}
+
+img:hover {
+    cursor: pointer;
+}
+
+.about {
+    color: black;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+/* Helpers */
+
+/* Flex Helpers */
+
+.flex {
+    display: flex;
+}
+
+.flex.mb {
+    margin-bottom: 80px;
+}
+
+.flex.space-between {
+    justify-content: space-between;
+}
+
+.flex.align-center {
+    align-items: center;
+}
+
+.flex.space-around {
+    justify-content: space-around;
+}
+
+.column {
+    flex-direction: column;
+}
+
+/* Grid Helpers */
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
+    justify-content: center;
+    gap: 20px;
+
+}
+
+
+/* List Helpers */
+
+.clean-list {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.list-item {
+    height: 100%;
 }
