--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ h1, h2, h3, h4, h5, h6 {
 .logo {
     font-family: Impact-regular;
     font-size: 30px;
+    padding: 20px;
 }
 /* LAYOUT */
 
@@ -51,9 +52,14 @@ h1, h2, h3, h4, h5, h6 {
     padding-bottom: 25px; */
 }
 
+.main-canvas {
+    margin-left: 50px;
+    margin-right: 50px;
+    padding: 30px 60px;
+}
 .main-header .main-nav>*:not(:last-child) {
     /* margin-inline-end: 90px; */
-    border-right: solid 1px #1d1d1d;
+    border-right: solid 1px #8a8a8a;;
 }
 
 .main-container {
@@ -79,7 +85,7 @@ h1, h2, h3, h4, h5, h6 {
     box-shadow: inset 0 -6px 0 #ff7f00;
 }
 
-.gallery {
+.gallery, .main-canvas {
     background-color: #e3e3e3;
 }
 
@@ -91,6 +97,8 @@ img:hover {
     color: black;
     margin-left: 50px;
     margin-right: 50px;
+    padding-top: 80px;
+    padding-bottom: 160px;
 }
 .my-image img {
     border-radius: 50%;
@@ -131,8 +139,8 @@ img:hover {
 
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto auto;
+    grid-template-columns: repeat(3, auto);
+    grid-auto-rows: auto;
     justify-content: center;
     gap: 20px;
 
@@ -163,4 +171,8 @@ img:hover {
 }
 .copyright {
     font-family: Montserrat-thin;
+}
+
+.hidden {
+    display: none;
 }
