--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,7 @@ button:hover {
     grid-template-rows: repeat(4, 90px);
     gap: 15px;
     text-align: center;
-    grid-template-areas: ". switch-line add-line delete-line ." "increase-font decrease-font align-left align-center align-right" "font-type font-type font-type stroke-color fill-color" ". download . share .";
+    grid-template-areas: ". switch-line add-line delete-line ." "increase-font decrease-font align-left align-center align-right" "font-type font-type font-type stroke-color fill-color" "download . share . save";
 }
 
 .switch-line-btn {
@@ -367,4 +367,43 @@ margin-bottom: 10px; */
     color: #ffffff;
     background-color: #ff7f00;
     text-align: center;
+}
+
+.save-btn {
+    grid-area: save;
+    font-family: Montserrat-regular;
+    font-size: 15px;
+    color: #ffffff;
+    background-color: #ff7f00;
+    text-align: center;
+    padding: 10px;
+}
+
+@media (max-width:900px) {
+    body {
+        width: 100vw;
+    }
+
+    .main-header .main-container {
+        flex-direction: column;
+    }
+    .main-container .gallery {
+        width: 100vw;
+    }
+    .grid-container {
+        grid-template-columns: repeat(2,1fr);
+        grid-auto-rows: auto;
+    }
+    img {
+        width: 100%;
+    }
+    .main-canvas {
+    margin-top: 20px;
+    height: 50vh;
+    flex-direction: column;
+    align-items: center;
+    }
+    .main-footer {
+        height: 50px;
+    }
 }
